--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "multiple-service-generator",
   "main": "./lib/multiple-service-generator",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "description": "A short description of your package",
   "keywords": [
   ],
@@ -11,7 +11,7 @@
   "repository": "https://github.com/atom/multiple-service-generator",
   "license": "MIT",
   "engines": {
-    "atom": ">=0.174.0 <2.0.0"
+    "atom": ">=0.50"
   },
   "dependencies": {
   }
