--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
   "name": "multiple-service-generator",
   "main": "./lib/multiple-service-generator",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "A short description of your package",
-  "keywords": [
-  ],
+  "keywords": [],
   "activationCommands": {
     "atom-workspace": "multiple-service-generator:toggle"
   },
@@ -13,6 +12,5 @@
   "engines": {
     "atom": ">=0.174.0 <2.0.0"
   },
-  "dependencies": {
-  }
+  "dependencies": {}
 }
